# speckle-automate-checker

./: DEVELOPER_README.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: main.yml
hooks/: pre-commit
src/: filters.py  function.py  helpers.py  inputs.py  predicates.py  rule_processor.py  rules.py  rules_old.py  spreadsheet.py
test_data/: v2_object.json  v3_object.json
tests/: conftest.py  localtest.py  test_comparisons.py  test_function.py  test_parameters.py  test_rule_processing.py  test_user_entry.py
