[project]
name = "speckle-automate-checker"
version = "0.1.0"
description = "Allows for QAQC property checking with Speckle"
authors = ["Jonathon Broughton <jonathon@speckle.systems>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.6.0",
    "pandas>=2.2.3",
    "pydantic==2.10.6",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.1",
    "specklepy>=2.21.3",
]


[dependency-groups]
dev = [
    "pytest-assertcount>=1.0.0",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]


[tool.ruff]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "D", # pydocstyle
    "I", # isort
]
line-length = 120
ignore = ["F401", "F403"]

[tool.ruff.pydocstyle]
convention = "google"
